--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,7 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face{
+    font-family: mont;
+    src: url("../src/assets/fonts/Montserrat-Regular.ttf");
+}
+*{
+    font-family: mont, sans-serif;
+}
